fixing some layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,4 +22,7 @@ img {
     .jumbotron {
       width: 250px;
     }
+    .card {
+        margin-top: 1em;
+    }
   }
